ordered avg salary in descending

--- a/bonus.ipynb
+++ b/bonus.ipynb
@@ -343,6 +343,7 @@
    ],
    "source": [
     "avgSalary_title = pd.DataFrame(salary_data.groupby('title')['salary'].mean())\n",
+    "avgSalary_title = avgSalary_title.sort(['salary'],ascending)\n",
     "avgSalary_title"
    ]
   },
